--- a/example/index.html
+++ b/example/index.html
@@ -56,6 +56,10 @@
     <h2>下载文件</h2>
     <button id="downloadFileBtn">Download</button>
   </section>
+  <section>
+    <h2>转换为Webp</h2>
+    <input type="file" id="fileInput" accept="image/*">
+  </section>
 
   <script src="../dist/ming-tool.js"></script>
   <script>
@@ -108,6 +112,15 @@
       option.update({dataSource})
       console.log(option)
     }, 1000)
+
+    const fileInput = document.getElementById('fileInput');
+    fileInput.addEventListener('change', async (e) => {
+      const file = e.target.files[0];
+      const blob = await window['@jinming6/mingTool'].convert2Webp(file);
+      const url = URL.createObjectURL(blob);
+      window['@jinming6/mingTool'].downloadFile(url, 'example.webp');
+      URL.revokeObjectURL(url);
+    })
   </script>
 </body>
 
