--- a/example/index.html
+++ b/example/index.html
@@ -140,7 +140,8 @@
     testBtn.addEventListener('click', async () => {
       try {
         const img = new Image()
-        img.src = './demo.png'
+        img.src = 'https://s2.loli.net/2024/04/26/z9NEnaI7lJqwrx5.png'
+        img.crossOrigin = 'anonymous'
         img.onload = () => {
           const canvas = document.createElement('canvas');
           const ctx = canvas.getContext('2d');
